<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.theconverter.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_speedFragment"
            app:destination="@id/weightFragment"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_FirstFragment_to_temperatureFragment"
            app:destination="@id/temperatureFragment"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_FirstFragment_to_distanceFragment"
            app:destination="@id/distanceFragment"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/weightFragment"
        android:name="com.example.theconverter.WeightFragment"
        android:label="@string/weight_fragment_label"
        tools:layout="@layout/fragment_weight">
        <action
            android:id="@+id/action_SpeedFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@anim/nav_default_enter_anim" />
    </fragment>

    <fragment
        android:id="@+id/temperatureFragment"
        android:name="com.example.theconverter.TemperatureFragment"
        android:label="@string/temperature_fragment_label"
        tools:layout="@layout/fragment_temperature" >
        <action
            android:id="@+id/action_temperatureFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@anim/nav_default_enter_anim" />
    </fragment>

    <fragment
        android:id="@+id/distanceFragment"
        android:name="com.example.theconverter.DistanceFragment"
        android:label="fragment_distance"
        tools:layout="@layout/fragment_distance" >
        <action
            android:id="@+id/action_distanceFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@anim/nav_default_enter_anim" />
    </fragment>

</navigation>