<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/titleScreenBackground"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="87dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="32dp"
        android:text="Laboratory work № 2"
        android:textSize="14dp"
        />
    <TextView
        android:id="@+id/text1View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="62dp"
        android:text="Developers: Онішко І., Товстуха Г., Стеценко Є. "
        android:textSize="14dp"
        />


    <Button
        android:id="@+id/button_temperature"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:layout_gravity="center|end"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/temperature_button_text"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_weight"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:layout_gravity="start|center"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/weight_fragment_label"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_distance"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/distance_button_text"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent" />



</FrameLayout>